--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a  class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                             <div class="dishes--hover-desc">
                                 <h4>Italian Source Mushroom</h4>
                                 <div class="price">$12</div>
-                                <a href="#" class="clickHere-button">Click here</a>
+                                <a class="clickHere-button">Click here</a>
                             </div>
                         </div>
                     </div>
@@ -603,7 +603,7 @@
                 </div>
             </div>
 
-            <div class="footer-top--item">
+            <div class="footer-top--item footer-top--field">
                 <h3>Feedback form</h3>
                 <div class="footer-top--forms">
                     <input type="text" placeholder="Name">
@@ -611,7 +611,7 @@
                     <input type="text" placeholder="Phone">
                     <textarea name="" id="" cols="30" rows="4" placeholder="Message"></textarea>
                 </div>
-                <a class="clickHere-button">Submit</a>
+                <a class="clickHere-button" id="submit">Submit</a>
             </div>
 
         </div>
